[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-toolkit"
description = "Codex session clone, bundle transfer, and desktop repair toolkit."
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff>=0.6,<1.0"]

[project.scripts]
codex-session-toolkit = "codex_session_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "codex_session_toolkit.__version__"}

[tool.ruff]
target-version = "py38"
src = ["src", "tests"]
